--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "strict": true,
         "allowJs": true,
-        "checkJs": true
+        "checkJs": true,
+        "lib": ["ES2016", "DOM"]
     }
   }
